# libass-MSVC

./: CMakeLists.txt  cmake_config.h  libass.rc.in
cmake/: FindFribidi.cmake  FindHarfbuzz.cmake
compare/: compare.c
libass/: ass_drawing.c  ass_fontselect.c  ass_utils.h
